@@ -1,6 +1,7 @@
 /*
  * Copyright (C) 2007 The GNOME Foundation
- * Written by Thomas Wood <thos@gnome.org>
+ * Written by Rodney Dawes <dobey@ximian.com>
+ *            Denis Washington <denisw@svn.gnome.org>
  * All Rights Reserved
  *
  * This program is free software; you can redistribute it and/or modify
