@@ -1,3 +1,7 @@
+2007-05-02  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance-desktop.[ch]: Corrected copyright notice authors.
+
 2007-05-01  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance.glade:
